<resources>
    <string name="app_name">Ruh Kehidupan</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Asep Sutisna</string>
    <string name="nav_header_subtitle">Sanbercode Bootcamp</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_quran">Al-Qur\'an</string>
    <string name="menu_dzikir">Dzikir</string>
    <string name="menu_doa">Doa</string>
    <string name="number">1</string>
    <string name="desc_ayat">Desc Ayat</string>
    <string name="desc_surah_content">%1$s, %2$s Ayat</string>
    <string name="arabic">ARABIC</string>
    <string name="name_surah">Name Surah</string>
    <string name="judul">Judul</string>
    <string name="dibaca">Dibaca 1x</string>
    <string name="indo">Indonesia</string>
    <string name="ayat">%s ayat</string>
    <string name="resource_dalil">Sumber Dalil</string>
    <string name="dalil_desc">Ini dalilnya atau keutamaannya</string>
    <string name="tab_text_1">Pagi</string>
    <string name="tab_text_2">Petang</string>
    <string name="tab_text_3">Ba\'da Shalat</string>

    <string name="content_tab_text">This is Tab %1$d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dark_mode">Mode Malam</string>
    <string name="ic_back">Tombol Kembali</string>
    <string name="tafsir">Tafsir</string>
    <string name="oops">Oops! Afwan akses ditutup</string>
    <string name="cek_connection">Silahkan hidupkan koneksi internet dan coba kembali</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_doa_hafalan">DoaHafalanActivity</string>
    <string name="title_doa">Doa</string>
    <string name="title_hafalan">Hafalan</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_coba_bottom">CobaBottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="cd_down">Tombol untuk melihat referensi</string>
    <string name="cd_nomor_surat">Nomor Surat</string>
</resources>