<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_quran">

    <fragment
        android:id="@+id/nav_quran"
        android:name="com.asep.ruhkehidupan.ui.drawer.quran.QuranFragment"
        android:label="@string/menu_quran"
        tools:layout="@layout/fragment_quran"/>

    <fragment
        android:id="@+id/nav_dzikir"
        android:name="com.asep.ruhkehidupan.ui.drawer.dzikir.DzikirFragment"
        android:label="@string/menu_dzikir"
        tools:layout="@layout/fragment_dzikir" />

    <fragment
        android:id="@+id/nav_doa"
        android:name="com.asep.ruhkehidupan.ui.drawer.DoaHafalanFragment"
        android:label="@string/menu_doa"
        tools:layout="@layout/fragment_doa_hafalan" />
</navigation>