<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_doa">

    <fragment
        android:id="@+id/navigation_doa"
        android:name="com.asep.ruhkehidupan.ui.drawer.bottom.doa.DoaFragment"
        android:label="@string/title_doa"
        tools:layout="@layout/fragment_doa" />

    <fragment
        android:id="@+id/navigation_hafalan"
        android:name="com.asep.ruhkehidupan.ui.drawer.bottom.hafalan.HafalanFragment"
        android:label="@string/title_hafalan"
        tools:layout="@layout/fragment_hafalan" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.asep.ruhkehidupan.ui.drawer.bottom.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>