<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cd_list_surah"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_8sdp"
    android:backgroundTint="@color/card_background"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardElevation="@dimen/_8sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageNumber"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:contentDescription="@string/cd_nomor_surat"
            android:scaleType="fitXY"
            android:src="@drawable/img_number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_2sdp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/number"
            android:textColor="@color/text_title"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="@+id/imageNumber"
            app:layout_constraintEnd_toEndOf="@+id/imageNumber"
            app:layout_constraintStart_toStartOf="@+id/imageNumber"
            app:layout_constraintTop_toTopOf="@+id/imageNumber" />

        <TextView
            android:id="@+id/tv_name_surah_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/name_surah"
            android:textColor="@color/text_title"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintStart_toEndOf="@+id/imageNumber"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tv_desc_surah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand"
            android:text="@string/desc_ayat"
            android:textColor="@color/sub_text"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="@+id/tv_name_surah_id"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <TextView
            android:id="@+id/tv_name_surah_arabic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:fontFamily="@font/calibri_regular"
            android:text="@string/arabic"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintBottom_toBottomOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="39dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>