<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ui.SettingActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:elevation="@dimen/_10sdp"
        android:minHeight="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/ic_back"
                android:focusable="true"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/tittle_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_16sdp"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center_vertical"
                android:text="@string/action_settings"
                android:textColor="@color/text_primary"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_dark_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/dark_mode"
        android:textColor="@color/text_title"
        android:textSize="@dimen/_14ssp" />

</LinearLayout>