<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cd_doa"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTint="@color/card_background"
    android:elevation="4dp"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:srcCompat="@drawable/img_number" />

            <TextView
                android:id="@+id/tv_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/number"
                android:textColor="@color/text_primary"
                card_view:layout_constraintBottom_toBottomOf="@+id/imageView"
                card_view:layout_constraintEnd_toEndOf="@+id/imageView"
                card_view:layout_constraintStart_toStartOf="@+id/imageView"
                card_view:layout_constraintTop_toTopOf="@+id/imageView" />

            <TextView
                android:id="@+id/tv_judul"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/judul"
                android:textColor="@color/text_title"
                android:textSize="18sp"
                android:textStyle="bold"
                card_view:layout_constraintBottom_toBottomOf="@+id/imageView"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintStart_toEndOf="@+id/imageView"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintVertical_bias="0.31" />

            <TextView
                android:id="@+id/tv_arab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/calibri_regular"
                android:text="@string/arabic"
                android:textColor="@color/text_title"
                android:textDirection="rtl"
                android:textSize="27sp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.5"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/tv_indo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/quicksand"
                android:text="@string/indo"
                android:textColor="@color/sub_text"
                android:textSize="14sp"
                android:textStyle="italic"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.48"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@id/tv_arab" />

            <TextView
                android:id="@+id/tv_dalil"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/resource_dalil"
                android:textColor="@color/text_title"
                card_view:drawableStartCompat="@drawable/ic_dalil"
                card_view:layout_constraintEnd_toStartOf="@+id/down"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_indo" />

            <ImageButton
                android:id="@+id/down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@string/cd_down"
                android:src="@drawable/ic_arrow_down"
                card_view:layout_constraintBottom_toBottomOf="@+id/tv_dalil"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toEndOf="@id/tv_dalil"
                card_view:layout_constraintTop_toTopOf="@+id/tv_dalil" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/hidden_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true"
            android:visibility="gone">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/text_title"
                app:circularflow_defaultRadius="8dp" />

            <TextView
                android:id="@+id/dalil"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/quicksand"
                android:paddingBottom="12dp"
                android:text="@string/dalil_desc"
                android:textColor="@color/sub_text" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>